--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="graphics.html">
                     <img class="card2" src="images/scsc card.svg" alt="scsc graphics">
                 </a>
             </li>
