--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +14,13 @@
     
     <div class = "nav-container">
         <header>
-            <a href="index.html" class="logo">JYip</a>
+            <a href="index" class="logo">JYip</a>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="index">Work</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="resume">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -42,12 +43,12 @@
     <div class="work-cards">
         <ul>
             <li>
-                <a href="venmo redesign.html">
+                <a href="venmo redesign">
                     <img class="card1" src="images/venmo card.svg" alt="venmo redesign">
                 </a>
             </li>
             <li>
-                <a href="graphics.html">
+                <a href="graphics">
                     <img class="card2" src="images/scsc card.svg" alt="scsc graphics">
                 </a>
             </li>
