--- a/resume.html
+++ b/resume.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="images/favicon-32x32.png">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-    <title>Jonathan Yip</title>
+    <title>About | Jonathan Yip</title>
 </head>
 <body>
     <div class = "nav-container">
         <header>
-            <a href="index.html" class="logo">JYip</a>
+            <a href="index" class="logo">JYip</a>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="index">Work</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="resume">Resume</a></li>
                 </ul>
             </nav>
         </header>
