--- a/graphics.html
+++ b/graphics.html
@@ -12,13 +12,13 @@
 <body>
     <div class = "nav-container">
         <header>
-            <a href="index.html" class="logo">JYip</a>
+            <a href="index" class="logo">JYip</a>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="index">Work</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="resume">Resume</a></li>
                 </ul>
             </nav>
         </header>
