--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class = "nav-container">
         <header>
-            <a href="index" class="logo">JYip</a>
+            <a href="index.html" class="logo">JYip</a>
 
             <nav>
                 <ul>
