--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="index">Work</a></li>
-                    <li><a href="about">About</a></li>
-                    <li><a href="resume">Resume</a></li>
+                    <li><a href="index.html">Work</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </nav>
         </header>
