--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="resume">Resume</a></li>
                 </ul>
             </nav>
         </header>
